Update markdown text
Replace invite image with text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                             to the launch
                         </h1>
                         <h1 class="emphasis">of the</h1>
-                        <img src="images/invite.png" alt="NEW COMPANY WEBSITE" id="inviteImage">
+                        <h1 class="largeText uppercase freightFontSemibold">
+                            New <br>
+                            <span class="redText">Company <br></span>
+                            Website
+                        </h1>
                         <p class="inviteDetails">Lorem ipsum dolor sit amet, vix suas liber conclusionemque eu. Ad quo esse purto eros, nemore volutpat ut quo, copiosae concludaturque nam in.</p>
                         <hr>
                         <h1 class="uppercase">Ad est odio noster:</h1>
