Added rectangle frames and update footer padding

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- <h1 class="pageContent">LOGO</h1> -->
         <!-- <div class="popOver hidden"> ~ -->
         <div class="popOver">
+            <div class="rectangleFrame"></div>
             <div class="frame">
                 <div id="popOverContent">
                     <main>
@@ -61,6 +62,7 @@
                     </footer>
                 </div>
             </div>
+            <div class="rectangleFrame"></div>
         </div>
         <script src="js/main.js"></script>
     </body>
