Added checkbox styling

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                             
                             <label for="confirmation" id="confirmationLabel">
                                 <input type="checkbox" id="confirmation" name="confirmation">
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
+                                <span>
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
+                                </span>
                             </label>
                         </form>    
                     </footer>
