--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
         <meta charset="UTF-8">
         <title>TBK Challenge</title>
         <meta name="viewport" content="initial-scale=1.0, width=device-width">
+        
         <link rel="stylesheet" href="https://use.typekit.net/llt7ylv.css">
+        
         <link href="css/reset.css" rel="stylesheet" type="text/css">
         <link href="css/main.css" rel="stylesheet" type="text/css">
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
     </head>
 
     <body>  
