Add cancel button

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 
     <body>  
         <!-- <h1 class="pageContent">LOGO</h1> -->
-        <!-- <div class="popOver hidden"> ~ -->
+        <!-- <div class="popOver hidden">  -->
         <div class="popOver">
             <div class="rectangleFrame"></div>
             <div class="frame">
                 <div id="popOverContent">
                     <main>
+                        <button class="cancelButton">X</button>
                         <h1 class="hidden">Pop-over invite to the New Company Website</h1>
                         <h1 class="inviteFirstLine uppercase">
                             You are cordially invited
