--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="frame">
                 <div id="popOverContent">
                     <main>
-                        <button class="cancelButton">X</button>
+                        <button class="cancelButton">x</button>
                         <h1 class="hidden">Pop-over invite to the New Company Website</h1>
                         <h1 class="inviteFirstLine uppercase">
                             You are cordially invited
