Added responsive images

--- a/index.html
+++ b/index.html
@@ -46,8 +46,32 @@
                             <li>Vim at rationibus interesset</li>
                         </ul>
                     </main>
-                    <img src="images/chisel.png" alt="Chisel and wood shavings" class="overlayImg chiselImg">
-                    <img src="images/shavings.png" alt="Wood shaving" class="overlayImg shavingsImg" >
+
+                    <img
+                        sizes="(min-width: 1200px) 25vw, 40vw"
+                        srcset="
+                        images/chisel/chisel_pitxm8_c_scale,w_320.png 320w,
+                        images/chisel/chisel_pitxm8_c_scale,w_404.png 404w,
+                        images/chisel/chisel_pitxm8_c_scale,w_478.png 478w,
+                        images/chisel/chisel_pitxm8_c_scale,w_537.png 537w,
+                        images/chisel/chisel_pitxm8_c_scale,w_603.png 603w,
+                        images/chisel/chisel_pitxm8_c_scale,w_648.png 648w,
+                        images/chisel/chisel_pitxm8_c_scale,w_652.png 652w"
+                        src="chisel_pitxm8_c_scale,w_652.png"
+                        class="overlayImg chiselImg"
+                        alt="Chisel and wood shavings">
+
+                    <img
+                        sizes="(min-width: 1200px) 25vw, 15vw"
+                        srcset="
+                        images/shavings/shavings_cviyze_c_scale,w_320.png 320w,
+                        images/shavings/shavings_cviyze_c_scale,w_384.png 384w"
+                        src="images/shavings/shavings_cviyze_c_scale,w_384.png"
+                        class="overlayImg shavingsImg" 
+                        alt="Wood shaving">
+
+                    <!-- <img src="images/chisel.png" alt="Chisel and wood shavings" class="overlayImg chiselImg"> -->
+                    <!-- <img src="images/shavings.png" alt="Wood shaving" class="overlayImg shavingsImg" > -->
                     <footer>
                         <h1 class="uppercase freightFontSemibold">Get your foot in the door.</h1>
                         <p>Know the moment our new website goes live.</p>
