Add animation to pop-over on show

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <body>  
         <!-- <h1 class="pageContent">LOGO</h1> -->
-        <!-- <div class="popOver hidden">  -->
-        <div class="popOver">
+        <div class="popOver hidden"> 
+        <!-- <div class="popOver"> -->
             <div class="rectangleFrame"></div>
             <div class="frame">
                 <div id="popOverContent">
@@ -62,7 +62,7 @@
                         alt="Chisel and wood shavings">
 
                     <img
-                        sizes="(min-width: 1200px) 25vw, 15vw"
+                        sizes="(min-width: 1200px) 15vw, 20vw"
                         srcset="
                         images/shavings/shavings_cviyze_c_scale,w_320.png 320w,
                         images/shavings/shavings_cviyze_c_scale,w_384.png 384w"
@@ -70,8 +70,6 @@
                         class="overlayImg shavingsImg" 
                         alt="Wood shaving">
 
-                    <!-- <img src="images/chisel.png" alt="Chisel and wood shavings" class="overlayImg chiselImg"> -->
-                    <!-- <img src="images/shavings.png" alt="Wood shaving" class="overlayImg shavingsImg" > -->
                     <footer>
                         <h1 class="uppercase freightFontSemibold">Get your foot in the door.</h1>
                         <p>Know the moment our new website goes live.</p>
