Update bullet list responsiveness

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <body>  
         <!-- <h1 class="pageContent">LOGO</h1> -->
-        <div class="popOver hidden"> 
-        <!-- <div class="popOver"> -->
+        <!-- <div class="popOver hidden">  -->
+        <div class="popOver">
             <div class="rectangleFrame"></div>
             <div class="frame">
                 <div id="popOverContent">
