--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="popOver">
             <div class="rectangleFrame"></div>
             <div class="frame">
-                <div id="popOverContent">
+                <div id="popOverContent" role="navigation" aria-label="Pop-over window">
                     <main>
                         <button class="cancelButton">x</button>
                         <h1 class="hidden">Pop-over invite to the New Company Website</h1>
@@ -85,7 +85,7 @@
                             </div>
                             
                             <label for="confirmation" id="confirmationLabel">
-                                <input type="checkbox" id="confirmation" name="confirmation">
+                                <input type="checkbox" id="confirmation" name="confirmation"   role="checkbox" aria-checked="false">
                                 <span>
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
                                 </span>
