Added checkbox keybaord accessibility feature

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="frame">
                 <div id="popOverContent" role="navigation" aria-label="Pop-over window">
                     <main>
-                        <button class="cancelButton">x</button>
+                        <button class="cancelButton" tabindex=0>x</button>
                         <h1 class="hidden">Pop-over invite to the New Company Website</h1>
                         <h1 class="inviteFirstLine uppercase">
                             You are cordially invited
@@ -84,7 +84,7 @@
                             </div>
                             
                             <label for="confirmation" id="confirmationLabel">
-                                <input type="checkbox" id="confirmation" name="confirmation"   role="checkbox" aria-checked="false">
+                                <input type="checkbox" id="confirmation" name="confirmation">
                                 <span>
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
                                 </span>
