--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="popOver">
             <div class="rectangleFrame"></div>
             <div class="frame">
-                <div id="popOverContent" role="navigation" aria-label="Pop-over window">
+                <div id="popOverContent" aria-label="Pop-over window">
                     <main>
-                        <button class="cancelButton" tabindex=0>x</button>
+                        <button class="cancelButton" aria-label="cancel" tabindex=0>x</button>
                         <h1 class="hidden">Pop-over invite to the New Company Website</h1>
                         <h1 class="inviteFirstLine uppercase">
                             You are cordially invited
@@ -36,8 +36,8 @@
                         </h1>
                         <p class="inviteDetails">Lorem ipsum dolor sit amet, vix suas liber conclusionemque eu. Ad quo esse purto eros, nemore volutpat ut quo, copiosae concludaturque nam in.</p>
                         <hr>
-                        <h1 class="uppercase">Ad est odio noster:</h1>
-                        <ul>
+                        <h2 class="uppercase">Ad est odio noster:</h2>
+                        <ul aria-label="Invitation details">
                             <li>Ex vis amet graeci accumsan</li>
                             <li>Civibus iracundia quo ad</li>
                             <li>Eu impetus feugiat civibus qui</li>
@@ -47,7 +47,7 @@
                     </main>
 
                     <img
-                        sizes="(min-width: 1200px) 25vw, 40vw"
+                        sizes="(min-width: 1200px) 27vw, 40vw"
                         srcset="
                         images/chisel/chisel_pitxm8_c_scale,w_320.png 320w,
                         images/chisel/chisel_pitxm8_c_scale,w_404.png 404w,
@@ -61,7 +61,7 @@
                         alt="Chisel and wood shavings">
 
                     <img
-                        sizes="(min-width: 1200px) 15vw, 20vw"
+                        sizes="(min-width: 1200px) 17vw, 20vw"
                         srcset="
                         images/shavings/shavings_cviyze_c_scale,w_320.png 320w,
                         images/shavings/shavings_cviyze_c_scale,w_384.png 384w"
