Hide pop-over on load

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     </head>
 
     <body>  
-        <!-- <div class="popOver hidden">  -->
-        <div class="popOver">
+        <div class="popOver hidden"> 
             <div class="rectangleFrame"></div>
             <div class="frame">
                 <div id="popOverContent" aria-label="Pop-over window">
