--- a/index.html
+++ b/index.html
@@ -21,28 +21,30 @@
                 <div id="popOverContent" aria-label="Pop-over window">
                     <main>
                         <button class="cancelButton" aria-label="cancel" tabindex=0>x</button>
-                        <h1 class="hidden">Pop-over invite to the New Company Website</h1>
-                        <h1 class="inviteFirstLine uppercase">
-                            You are cordially invited
-                            <br>
-                            to the launch
-                        </h1>
-                        <h1 class="emphasis">of the</h1>
-                        <h1 class="largeText uppercase freightFontSemibold">
-                            New <br>
-                            <span class="redText">Company <br></span>
-                            Website
-                        </h1>
-                        <p class="inviteDetails">Lorem ipsum dolor sit amet, vix suas liber conclusionemque eu. Ad quo esse purto eros, nemore volutpat ut quo, copiosae concludaturque nam in.</p>
-                        <hr>
-                        <h2 class="uppercase">Ad est odio noster:</h2>
-                        <ul aria-label="Invitation details">
-                            <li>Ex vis amet graeci accumsan</li>
-                            <li>Civibus iracundia quo ad</li>
-                            <li>Eu impetus feugiat civibus qui</li>
-                            <li>Mel in mucius argumentum, an accumsan petentium vim</li> 
-                            <li>Vim at rationibus interesset</li>
-                        </ul>
+                        <div class="mainContent">
+                            <h1 class="hidden">Pop-over invite to the New Company Website</h1>
+                            <h1 class="inviteFirstLine uppercase">
+                                You are cordially invited
+                                <br>
+                                to the launch
+                            </h1>
+                            <h1 class="emphasis">of the</h1>
+                            <h1 class="largeText uppercase freightFontSemibold">
+                                New <br>
+                                <span class="redText">Company <br></span>
+                                Website
+                            </h1>
+                            <p class="inviteDetails">Lorem ipsum dolor sit amet, vix suas liber conclusionemque eu. Ad quo esse purto eros, nemore volutpat ut quo, copiosae concludaturque nam in.</p>
+                            <hr>
+                            <h2 class="uppercase">Ad est odio noster:</h2>
+                            <ul aria-label="Invitation details">
+                                <li>Ex vis amet graeci accumsan</li>
+                                <li>Civibus iracundia quo ad</li>
+                                <li>Eu impetus feugiat civibus qui</li>
+                                <li>Mel in mucius argumentum, an accumsan petentium vim</li> 
+                                <li>Vim at rationibus interesset</li>
+                            </ul>
+                        </div>
                     </main>
 
                     <img
@@ -60,7 +62,7 @@
                         alt="Chisel and wood shavings">
 
                     <img
-                        sizes="(min-width: 1200px) 17vw, 20vw"
+                        sizes="(min-width: 1200px) 17vw, 21vw"
                         srcset="
                         images/shavings/shavings_cviyze_c_scale,w_320.png 320w,
                         images/shavings/shavings_cviyze_c_scale,w_384.png 384w"
@@ -81,7 +83,7 @@
                                 
                                 <button class="CTAbutton uppercase" type="button">Submit</button>
                             </div>
-                            
+
                             <label for="confirmation" id="confirmationLabel">
                                 <input type="checkbox" id="confirmation" name="confirmation">
                                 <span>
